submissions for week 3 day 1

--- a/Pandas_Grouping/Lab_Pandas_Grouping_Data_Vehicles.ipynb
+++ b/Pandas_Grouping/Lab_Pandas_Grouping_Data_Vehicles.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "executionInfo": {
      "elapsed": 4,
@@ -26,7 +26,18 @@
     },
     "id": "jL4kjGt66Fg5"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mDas Ausführen von Zellen mit „base“ erfordert das ipykernel-Paket.\n",
+      "\u001b[1;31mFühren Sie den folgenden Befehl aus, um „ipykernel“ in der Python-Umgebung zu installieren. \n",
+      "\u001b[1;31mBefehl: „conda install -n base ipykernel --update-deps --force-reinstall“"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np"
@@ -973,6 +984,11 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "lJMDlBOM6Fg7"
    },
@@ -982,36 +998,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {
     "id": "cbk5R7HL6Fg8"
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Chevrolet                             3643\n",
-       "Ford                                  2946\n",
-       "Dodge                                 2360\n",
-       "GMC                                   2347\n",
-       "Toyota                                1836\n",
-       "                                      ... \n",
-       "Excalibur Autos                          1\n",
-       "S and S Coach Company  E.p. Dutton       1\n",
-       "Environmental Rsch and Devp Corp         1\n",
-       "E. P. Dutton, Inc.                       1\n",
-       "Lambda Control Systems                   1\n",
-       "Name: Make, Length: 127, dtype: int64"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'cars' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m### your code us here\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m cars[\u001b[39m'\u001b[39m\u001b[39mMake\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mvalue_counts()\n\u001b[1;32m      3\u001b[0m cars\u001b[39m.\u001b[39mgroupby(\u001b[39m'\u001b[39m\u001b[39mMake\u001b[39m\u001b[39m'\u001b[39m)\u001b[39m.\u001b[39mvalue_counts()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'cars' is not defined"
+     ]
     }
    ],
    "source": [
     "### your code us here\n",
-    "cars['Make'].value_counts()"
+    "cars['Make'].value_counts()\n",
+    "cars.groupby('Make').value_counts()"
    ]
   },
   {
@@ -2146,7 +2153,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.13 (main, Aug 25 2022, 18:29:29) \n[Clang 12.0.0 ]"
   },
   "toc": {
    "base_numbering": 1,
@@ -2192,7 +2199,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "40d3a090f54c6569ab1632332b64b2c03c39dcf918b08424e98f38b5ae0af88f"
+    "hash": "8a5edab282632443219e051e4ade2d1d5bbc671c781051bf1437897cbdfea0f1"
    }
   }
  },
