--- a/Data_Customer_analyisis/Customer_analysis_Henrik.ipynb
+++ b/Data_Customer_analyisis/Customer_analysis_Henrik.ipynb
@@ -134,8 +134,7 @@
     "#cleaning some data\n",
     "\n",
     "\n",
-    "df['customer lifetime value'] = (\n",
-    "    df['customer lifetime value'].apply(lambda x: float(x.replace('%', ''))/100 if type(x) == str else x))\n",
+    "df['customer lifetime value'] = (df['customer lifetime value'].apply(lambda x: float(x.replace('%', ''))/100 if type(x) == str else x))\n",
     "#convert Customer Lifetime Value into integer by first converting it into float\n",
     "df['customer lifetime value'] = pd.to_numeric(df[\"customer lifetime value\"], errors = 'coerce')\n",
     "df['customer lifetime value'] = df['customer lifetime value'].apply(lambda x: math.trunc(x) if np.isnan(x) != True else 0)\n",
@@ -606,11 +605,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.13 (main, Aug 25 2022, 18:29:29) \n[Clang 12.0.0 ]"
   },
   "vscode": {
    "interpreter": {
-    "hash": "40d3a090f54c6569ab1632332b64b2c03c39dcf918b08424e98f38b5ae0af88f"
+    "hash": "8a5edab282632443219e051e4ade2d1d5bbc671c781051bf1437897cbdfea0f1"
    }
   }
  },
