--- a/13_02_Billboard_100_df.ipynb
+++ b/13_02_Billboard_100_df.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
        " {'title': \"Dancin' In The Country\", 'artist': 'Tyler Hubbard'}]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,124 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>title</th>\n",
-       "      <th>artist</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Flowers</td>\n",
-       "      <td>Miley Cyrus</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Kill Bill</td>\n",
-       "      <td>SZA</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Creepin'</td>\n",
-       "      <td>Metro Boomin, The Weeknd &amp; 21 Savage</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Anti-Hero</td>\n",
-       "      <td>Taylor Swift</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Unholy</td>\n",
-       "      <td>Sam Smith &amp; Kim Petras</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>95</th>\n",
-       "      <td>Hey Mor</td>\n",
-       "      <td>Ozuna Featuring Feid</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>96</th>\n",
-       "      <td>Gato de Noche</td>\n",
-       "      <td>Nengo Flow &amp; Bad Bunny</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>97</th>\n",
-       "      <td>Heart To Heart</td>\n",
-       "      <td>Mac DeMarco</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>98</th>\n",
-       "      <td>Never Gonna Not Dance Again</td>\n",
-       "      <td>P!nk</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>99</th>\n",
-       "      <td>Dancin' In The Country</td>\n",
-       "      <td>Tyler Hubbard</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>100 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                          title                                artist\n",
-       "0                       Flowers                           Miley Cyrus\n",
-       "1                     Kill Bill                                   SZA\n",
-       "2                      Creepin'  Metro Boomin, The Weeknd & 21 Savage\n",
-       "3                     Anti-Hero                          Taylor Swift\n",
-       "4                        Unholy                Sam Smith & Kim Petras\n",
-       "..                          ...                                   ...\n",
-       "95                      Hey Mor                  Ozuna Featuring Feid\n",
-       "96                Gato de Noche                Nengo Flow & Bad Bunny\n",
-       "97               Heart To Heart                           Mac DeMarco\n",
-       "98  Never Gonna Not Dance Again                                  P!nk\n",
-       "99       Dancin' In The Country                         Tyler Hubbard\n",
-       "\n",
-       "[100 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +271,7 @@
        "[100 rows x 2 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +304,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.13 (main, Aug 25 2022, 18:29:29) \n[Clang 12.0.0 ]"
   },
   "orig_nbformat": 4,
   "vscode": {
